fix table wrapping & BigDecimal

--- a/src/main/webapp/resources/css/table.css
+++ b/src/main/webapp/resources/css/table.css
@@ -37,16 +37,29 @@ td, th {
     border: 1px solid black;
 }
 
+.y-column {
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
+}
+
 #scroll-table {
     display: flex;
     align-items: flex-start;
-
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
     flex: 1 1 auto;
 
     transform: translateX(0);
     transition: transform 0.4s ease;
+
+
+    border-radius: 30px 0 30px 0;
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(20px) saturate(180%);
+    -webkit-backdrop-filter: blur(20px) saturate(180%);
+    box-shadow:
+            inset 0 0 15px rgba(255, 255, 255, 0.3),
+            0 0 30px rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
 }
 
 #scroll-table.close {
